--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
     <!-- Main content -->
 
     <main>
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container">
           <h1 class="section-title">Effective Solutions for Your Business</h1>
           <button class="section-button" type="button">Order Service</button>
         </div>
-      </section> -->
+      </section>
 
       <!-- Main content list -->
 
       <section class="advantages">
         <div class="container">
-          <h2 class="title">list</h2>
+          <h2 class="visually-hidden">list</h2>
           <ul class="adv-list">
             <li class="adv-list-items">
               <div class="features-wrapper">
@@ -377,18 +377,13 @@
       </section>
 
       <!-- Our Portfolio -->
-      <!-- <section class="portfolio">
+      <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="list-port">
             <li class="portfolio-list-item">
               <div class="app-image-box">
-                <img
-                  src="./images/banking.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <img src="./images/banking.jpg" alt="Banking App" />
                 <p class="app-descr-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -402,12 +397,7 @@
             </li>
             <li class="portfolio-list-item">
               <div class="app-image-box">
-                <img
-                  src="./images/cash.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <img src="./images/cash.jpg" alt="Cashless Payment" />
                 <p class="app-descr-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -421,12 +411,7 @@
             </li>
             <li class="portfolio-list-item">
               <div class="app-image-box">
-                <img
-                  src="./images/medi.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <img src="./images/medi.jpg" alt="Meditation App" />
                 <p class="app-descr-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -440,12 +425,7 @@
             </li>
             <li class="portfolio-list-item">
               <div class="app-image-box">
-                <img
-                  src="./images/taxi.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <img src="./images/taxi.jpg" alt="Taxi Service" />
                 <p class="app-descr-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -459,12 +439,7 @@
             </li>
             <li class="portfolio-list-item">
               <div class="app-image-box">
-                <img
-                  src="./images/illustr.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <img src="./images/illustr.jpg" alt="Screen Illustrations" />
                 <p class="app-descr-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -478,12 +453,7 @@
             </li>
             <li class="portfolio-list-item">
               <div class="app-image-box">
-                <img
-                  src="./images/onl.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <img src="./images/onl.jpg" alt="Online Courses" />
                 <p class="app-descr-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -497,11 +467,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- Footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-box">
         <div class="logo-text-box">
           <a href="./index.html" class="footer-logo"
@@ -583,10 +553,10 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!--Modal window-->
-    <!-- <div class="modal-container">
+    <div class="modal-container">
       <div class="modal-w-box">
         <button class="close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
@@ -662,7 +632,7 @@
           <button class="submit-form-btn" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <div class="js-menu-container mobile-menu">
       <button class="js-close-menu" type="button">x</button>
     </div>
