--- a/index.html
+++ b/index.html
@@ -625,8 +625,12 @@
                   <use href="./images/icon-footer.svg#icon-click"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a class="privacy-link" href="agreement-sheet"> Privacy Policy</a>
+              <div class="privacy-text">
+                I accept the terms and conditions of the
+                <a class="privacy-link" href="agreement-sheet">
+                  Privacy Policy</a
+                >
+              </div>
             </label>
           </div>
           <button class="submit-form-btn" type="submit">Send</button>
