--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
           <use href="./images/icon-footer.svg#icon-cross"></use>
         </svg>
       </button>
-      <div>
+      <div class="mobile-box">
         <nav class="mobile-nav">
           <ul class="mobile-nav-list">
             <li class="mobile-nav-item">
@@ -680,21 +680,21 @@
           <li class="mobile-social-item">
             <a class="mobile-social-link" href="">
               <svg class="mobile-social-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="mobile-social-item">
             <a class="mobile-social-link" href="">
               <svg class="mobile-social-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="mobile-social-item">
             <a class="mobile-social-link" href="">
               <svg class="mobile-social-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
