--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
     </footer>
 
     <!--Modal window-->
-    <!-- <div class="modal-container">
+    <div class="modal-container">
       <div class="modal-w-box">
         <button class="close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
@@ -636,7 +636,7 @@
           <button class="submit-form-btn" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <div class="js-menu-container mobile-menu">
       <button class="js-close-menu close-button" type="button">
         <svg class="close-icon" width="8" height="8">
