--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                 <picture>
                   <!-- Desctop -->
                   <source
-                    media="(min-width: 1440px)"
+                    media="(min-width: 1158px,)"
                     srcset="
                       images/banking-desc-x1.jpg 1x,
                       images/banking-desc-x2.jpg 2x
@@ -415,7 +415,7 @@
                   />
                   <!-- Mobile -->
                   <source
-                    media="(min-width: 320px)"
+                    media="(max-width: 767px)"
                     srcset="
                       images/banking-mob-x1.jpg 1x,
                       images/banking-mob-x2.jpg 2x
@@ -439,7 +439,7 @@
                 <picture>
                   <!-- Desctop -->
                   <source
-                    media="(min-width: 1440px)"
+                    media="(min-width: 1158px,)"
                     srcset="
                       images/cash-desc-x1.jpg 1x,
                       images/cash-desc-x2.jpg 2x
@@ -455,7 +455,7 @@
                   />
                   <!-- Mobile -->
                   <source
-                    media="(min-width: 320px)"
+                    media="(max-width: 767px)"
                     srcset="
                       images/cash-mob-x1.jpg 1x,
                       images/cash-mob-x2.jpg 2x
@@ -479,7 +479,7 @@
                 <picture>
                   <!-- Desctop -->
                   <source
-                    media="(min-width: 1440px)"
+                    media="(min-width: 1158px,)"
                     srcset="
                       images/medi-desc-x1.jpg 1x,
                       images/medi-desc-x2.jpg 2x
@@ -495,7 +495,7 @@
                   />
                   <!-- Mobile -->
                   <source
-                    media="(min-width: 320px)"
+                    media="(max-width: 767px)"
                     srcset="
                       images/medi-mob-x1.jpg 1x,
                       images/medi-mob-x2.jpg 2x
@@ -519,7 +519,7 @@
                 <picture>
                   <!-- Desctop -->
                   <source
-                    media="(min-width: 1440px)"
+                    media="(min-width: 1158px,)"
                     srcset="
                       images/taxi-desc-x1.jpg 1x,
                       images/taxi-desc-x2.jpg 2x
@@ -535,7 +535,7 @@
                   />
                   <!-- Mobile -->
                   <source
-                    media="(min-width: 320px)"
+                    media="(max-width: 767px)"
                     srcset="
                       images/taxi-mob-x1.jpg 1x,
                       images/taxi-mob-x2.jpg 2x
@@ -559,7 +559,7 @@
                 <picture>
                   <!-- Desctop -->
                   <source
-                    media="(min-width: 1440px)"
+                    media="(min-width: 1158px,)"
                     srcset="
                       images/illustr-desc-x1.jpg 1x,
                       images/illustr-desc-x2.jpg 2x
@@ -575,7 +575,7 @@
                   />
                   <!-- Mobile -->
                   <source
-                    media="(min-width: 320px)"
+                    media="(max-width: 767px)"
                     srcset="
                       images/illustr-mob-x1.jpg 1x,
                       images/illustr-mob-x2.jpg 2x
@@ -599,7 +599,7 @@
                 <picture>
                   <!-- Desctop -->
                   <source
-                    media="(min-width: 1440px)"
+                    media="(min-width: 1158px,)"
                     srcset="
                       images/onl-desc-x1.jpg 1x,
                       images/onl-desc-x2.jpg 2x
@@ -612,7 +612,7 @@
                   />
                   <!-- Mobile -->
                   <source
-                    media="(min-width: 320px)"
+                    media="(max-width: 767px)"
                     srcset="images/onl-mob-x1.jpg 1x, images/onl-mob-x2.jpg 2x"
                   />
                   <img src="./images/onl.jpg" alt="Online Courses" />
