--- a/index.html
+++ b/index.html
@@ -401,8 +401,8 @@
                   <source
                     media="(min-width: 1158px,)"
                     srcset="
-                      images/banking-desc-x1.jpg 1x,
-                      images/banking-desc-x2.jpg 2x
+                      .images/banking-desc-x1.jpg 1x,
+                      .images/banking-desc-x2.jpg 2x
                     "
                   />
                   <!-- Tablet -->
@@ -441,24 +441,24 @@
                   <source
                     media="(min-width: 1158px,)"
                     srcset="
-                      images/cash-desc-x1.jpg 1x,
-                      images/cash-desc-x2.jpg 2x
+                      ./images/cash-desc-x1.jpg 1x,
+                      ./images/cash-desc-x2.jpg 2x
                     "
                   />
                   <!-- Tablet -->
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      images/cash-tab-x1.jpg  1x,
-                      images/cash-desc-x2.jpg 2x
+                      ./images/cash-tab-x1.jpg 1x,
+                      .images/cash-desc-x2.jpg 2x
                     "
                   />
                   <!-- Mobile -->
                   <source
                     media="(max-width: 767px)"
                     srcset="
-                      images/cash-mob-x1.jpg 1x,
-                      images/cash-mob-x2.jpg 2x
+                      ./images/cash-mob-x1.jpg 1x,
+                      ./images/cash-mob-x2.jpg 2x
                     "
                   />
                   <img src="./images/cash.jpg" alt="Cashless Payment" />
@@ -481,24 +481,24 @@
                   <source
                     media="(min-width: 1158px,)"
                     srcset="
-                      images/medi-desc-x1.jpg 1x,
-                      images/medi-desc-x2.jpg 2x
+                      ./images/medi-desc-x1.jpg 1x,
+                      ./images/medi-desc-x2.jpg 2x
                     "
                   />
                   <!-- Tablet -->
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      images/medi-tab-x1.jpg  1x,
-                      images/medi-desc-x2.jpg 2x
+                      ./images/medi-tab-x1.jpg  1x,
+                      ./images/medi-desc-x2.jpg 2x
                     "
                   />
                   <!-- Mobile -->
                   <source
                     media="(max-width: 767px)"
                     srcset="
-                      images/medi-mob-x1.jpg 1x,
-                      images/medi-mob-x2.jpg 2x
+                      ./images/medi-mob-x1.jpg 1x,
+                      ./images/medi-mob-x2.jpg 2x
                     "
                   />
                   <img src="./images/medi.jpg" alt="Meditation App" />
@@ -521,24 +521,24 @@
                   <source
                     media="(min-width: 1158px,)"
                     srcset="
-                      images/taxi-desc-x1.jpg 1x,
-                      images/taxi-desc-x2.jpg 2x
+                      ./images/taxi-desc-x1.jpg 1x,
+                      ./images/taxi-desc-x2.jpg 2x
                     "
                   />
                   <!-- Tablet -->
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      images/taxi-tab-x1.jpg  1x,
-                      images/taxi-desc-x2.jpg 2x
+                      ./images/taxi-tab-x1.jpg  1x,
+                      ./images/taxi-desc-x2.jpg 2x
                     "
                   />
                   <!-- Mobile -->
                   <source
                     media="(max-width: 767px)"
                     srcset="
-                      images/taxi-mob-x1.jpg 1x,
-                      images/taxi-mob-x2.jpg 2x
+                      ./images/taxi-mob-x1.jpg 1x,
+                      ./images/taxi-mob-x2.jpg 2x
                     "
                   />
                   <img src="./images/taxi.jpg" alt="Taxi Service" />
@@ -561,24 +561,24 @@
                   <source
                     media="(min-width: 1158px,)"
                     srcset="
-                      images/illustr-desc-x1.jpg 1x,
-                      images/illustr-desc-x2.jpg 2x
+                      ./images/illustr-desc-x1.jpg 1x,
+                      ./images/illustr-desc-x2.jpg 2x
                     "
                   />
                   <!-- Tablet -->
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      images/illustr-tab-x1.jpg  1x,
-                      images/illustr-desc-x2.jpg 2x
+                      ./images/illustr-tab-x1.jpg  1x,
+                      ./images/illustr-desc-x2.jpg 2x
                     "
                   />
                   <!-- Mobile -->
                   <source
                     media="(max-width: 767px)"
                     srcset="
-                      images/illustr-mob-x1.jpg 1x,
-                      images/illustr-mob-x2.jpg 2x
+                      ./images/illustr-mob-x1.jpg 1x,
+                      ./images/illustr-mob-x2.jpg 2x
                     "
                   />
                 </picture>
@@ -601,19 +601,25 @@
                   <source
                     media="(min-width: 1158px,)"
                     srcset="
-                      images/onl-desc-x1.jpg 1x,
-                      images/onl-desc-x2.jpg 2x
+                      ./images/onl-desc-x1.jpg 1x,
+                      ./images/onl-desc-x2.jpg 2x
                     "
                   />
                   <!-- Tablet -->
                   <source
                     media="(min-width: 768px)"
-                    srcset="images/onl-tab-x1.jpg 1x, images/onl-desc-x2.jpg 2x"
+                    srcset="
+                      ./images/onl-tab-x1.jpg  1x,
+                      ./images/onl-desc-x2.jpg 2x
+                    "
                   />
                   <!-- Mobile -->
                   <source
                     media="(max-width: 767px)"
-                    srcset="images/onl-mob-x1.jpg 1x, images/onl-mob-x2.jpg 2x"
+                    srcset="
+                      ./images/onl-mob-x1.jpg 1x,
+                      ./images/onl-mob-x2.jpg 2x
+                    "
                   />
                   <img src="./images/onl.jpg" alt="Online Courses" />
                 </picture>
