--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/medi-tab-x1.jpg  1x,
-                      ./images/medi-desc-x2.jpg 2x
+                      ./images/medi-tab-1x.jpg  1x,
+                      ./images/medi-desc-2x.jpg 2x
                     "
                   />
                   <!-- Mobile -->
@@ -569,8 +569,8 @@
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/illustr-tab-x1.jpg  1x,
-                      ./images/illustr-desc-x2.jpg 2x
+                      ./images/illustr-tab-1x.jpg  1x,
+                      ./images/illustr-desc-2x.jpg 2x
                     "
                   />
                   <!-- Mobile -->
