--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                     media="(min-width: 768px)"
                     srcset="
                       ./images/cash-tab-x1.jpg 1x,
-                      .images/cash-desc-x2.jpg 2x
+                      .images/cash-tab-2x.jpg  2x
                     "
                   />
                   <!-- Mobile -->
@@ -489,8 +489,8 @@
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/medi-tab-1x.jpg  1x,
-                      ./images/medi-desc-2x.jpg 2x
+                      ./images/medi-tab-1x.jpg 1x,
+                      ./images/medi-tab-2x.jpg 2x
                     "
                   />
                   <!-- Mobile -->
@@ -521,7 +521,7 @@
                   <source
                     media="(min-width: 1158px,)"
                     srcset="
-                      ./images/taxi-desc-x1.jpg 1x,
+                      ./images/taxi-desc-1x.jpg 1x,
                       ./images/taxi-desc-x2.jpg 2x
                     "
                   />
@@ -529,7 +529,7 @@
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/taxi-tab-x1.jpg  1x,
+                      ./images/taxi-tab-1x.jpg  1x,
                       ./images/taxi-desc-x2.jpg 2x
                     "
                   />
