--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                     media="(min-width: 768px)"
                     srcset="
                       ./images/cash-tab-x1.jpg 1x,
-                      .images/cash-tab-2x.jpg  2x
+                      ./images/cash-tab-2x.jpg 2x
                     "
                   />
                   <!-- Mobile -->
