--- a/index.html
+++ b/index.html
@@ -401,24 +401,24 @@
                   <source
                     media="(min-width: 1158px,)"
                     srcset="
-                      .images/banking-desc-x1.jpg 1x,
-                      .images/banking-desc-x2.jpg 2x
+                      ./images/banking-desc-x1.jpg 1x,
+                      ./images/banking-desc-x2.jpg 2x
                     "
                   />
                   <!-- Tablet -->
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      images/banking-tab-x1.jpg  1x,
-                      images/banking-desc-x2.jpg 2x
+                      ./images/banking-tab-x1.jpg  1x,
+                      ./images/banking-desc-x2.jpg 2x
                     "
                   />
                   <!-- Mobile -->
                   <source
                     media="(max-width: 767px)"
                     srcset="
-                      images/banking-mob-x1.jpg 1x,
-                      images/banking-mob-x2.jpg 2x
+                      ./images/banking-mob-x1.jpg 1x,
+                      ./images/banking-mob-x2.jpg 2x
                     "
                   />
                   <img src="./images/banking.jpg" alt="Banking App" />
