--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <li class="team-item">
               <img
                 srcset="
-                  ./images/marketing.jpg         1x,
+                  ./images/marketing-desc-x1.jpg 1x,
                   ./images/marketing-desc-x2.jpg 2x
                 "
                 src="./images/Marketing.jpg"
@@ -569,8 +569,8 @@
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/illustr-tab-1x.jpg  1x,
-                      ./images/illustr-desc-2x.jpg 2x
+                      ./images/illustr-tab-1x.jpg 1x,
+                      ./images/illustr-tab-2x.jpg 2x
                     "
                   />
                   <!-- Mobile -->
