--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                 <picture>
                   <!-- Desctop -->
                   <source
-                    media="(min-width: 1158px,)"
+                    media="(min-width: 1158px)"
                     srcset="
                       ./images/banking-desc-x1.jpg 1x,
                       ./images/banking-desc-x2.jpg 2x
@@ -439,7 +439,7 @@
                 <picture>
                   <!-- Desctop -->
                   <source
-                    media="(min-width: 1158px,)"
+                    media="(min-width: 1158px)"
                     srcset="
                       ./images/cash-desc-x1.jpg 1x,
                       ./images/cash-desc-x2.jpg 2x
@@ -479,7 +479,7 @@
                 <picture>
                   <!-- Desctop -->
                   <source
-                    media="(min-width: 1158px,)"
+                    media="(min-width: 1158px)"
                     srcset="
                       ./images/medi-desc-x1.jpg 1x,
                       ./images/medi-desc-x2.jpg 2x
@@ -519,7 +519,7 @@
                 <picture>
                   <!-- Desctop -->
                   <source
-                    media="(min-width: 1158px,)"
+                    media="(min-width: 1158px)"
                     srcset="
                       ./images/taxi-desc-1x.jpg 1x,
                       ./images/taxi-desc-x2.jpg 2x
@@ -559,7 +559,7 @@
                 <picture>
                   <!-- Desctop -->
                   <source
-                    media="(min-width: 1158px,)"
+                    media="(min-width: 1158px)"
                     srcset="
                       ./images/illustr-desc-x1.jpg 1x,
                       ./images/illustr-desc-x2.jpg 2x
@@ -599,7 +599,7 @@
                 <picture>
                   <!-- Desctop -->
                   <source
-                    media="(min-width: 1158px,)"
+                    media="(min-width: 1158px)"
                     srcset="
                       ./images/onl-desc-x1.jpg 1x,
                       ./images/onl-desc-x2.jpg 2x
