--- a/index.html
+++ b/index.html
@@ -569,8 +569,8 @@
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/illustr-tab-1x.jpg 1x,
-                      ./images/illustr-tab-2x.jpg 2x
+                      ./images/illustr-tab-x1.jpg 1x,
+                      ./images/illustr-tab-x2.jpg 2x
                     "
                   />
                   <!-- Mobile -->
