--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/banking-tab-x1.jpg  1x,
-                      ./images/banking-desc-x2.jpg 2x
+                      ./images/banking-tab-x1.jpg 1x,
+                      ./images/banking-tab-x2.jpg 2x
                     "
                   />
                   <!-- Mobile -->
@@ -529,8 +529,8 @@
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/taxi-tab-1x.jpg  1x,
-                      ./images/taxi-desc-x2.jpg 2x
+                      ./images/taxi-tab-1x.jpg 1x,
+                      ./images/taxi-tab-x2.jpg 2x
                     "
                   />
                   <!-- Mobile -->
@@ -609,8 +609,8 @@
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/onl-tab-x1.jpg  1x,
-                      ./images/onl-desc-x2.jpg 2x
+                      ./images/onl-tab-x1.jpg 1x,
+                      ./images/onl-tab-x2.jpg 2x
                     "
                   />
                   <!-- Mobile -->
